Basic layout of application window

--- a/html/application.html
+++ b/html/application.html
@@ -19,6 +19,14 @@
     
     <!-- Window content -->
     <div class="windowContent">
+        <div id="sidebar">
+            <div class="profile">
+                <button id="optionsButton">...</button>
+            </div>
+            <div class="friends">
+               <h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1>
+            </div>
+        </div>
         <div id="application">
         </div>
     </div>
