Initial design of sidebar

--- a/html/application.html
+++ b/html/application.html
@@ -20,11 +20,65 @@
     <!-- Window content -->
     <div class="windowContent">
         <div id="sidebar">
-            <div class="profile">
+            <div class="profile" data-status="online">
+                <div class="avatar">
+                    <img src="../img/ccarlsen_s.png" class="rounded">
+                </div>
+                <h4>Christopher</h4>
+                <h6>@ccarlsen</h6>
                 <button id="optionsButton">...</button>
             </div>
             <div class="friends">
-               <h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1><h1>fdadfs</h1>
+                <ul>
+                    <li data-status="online">
+                        <div class="avatar">
+                            <img src="../img/ccarlsen_s.png" class="rounded">
+                        </div>
+                        <h6>Christopher <small>@ccarlsen</small></h6>
+                    </li>
+                    <li data-status="online">
+                        <div class="avatar">
+                            <img src="../img/ccarlsen_s.png" class="rounded">
+                        </div>
+                        <h6>Christopher <small>@ccarlsen</small></h6>
+                    </li>
+                    <li data-status="away">
+                        <div class="avatar">
+                            <img src="../img/ccarlsen_s.png" class="rounded">
+                        </div>
+                        <h6>Christopher <small>@ccarlsen</small></h6>
+                    </li>
+                    <li data-status="away">
+                        <div class="avatar">
+                            <img src="../img/ccarlsen_s.png" class="rounded">
+                        </div>
+                        <h6>Christopher <small>@ccarlsen</small></h6>
+                    </li>
+                    <li data-status="busy">
+                        <div class="avatar">
+                            <img src="../img/ccarlsen_s.png" class="rounded">
+                        </div>
+                        <h6>Christopher <small>@ccarlsen</small></h6>
+                    </li>
+                    <li data-status="offline">
+                        <div class="avatar">
+                            <img src="../img/ccarlsen_s.png" class="rounded">
+                        </div>
+                        <h6>Christopher <small>@ccarlsen</small></h6>
+                    </li>
+                    <li data-status="offline">
+                        <div class="avatar">
+                            <img src="../img/ccarlsen_s.png" class="rounded">
+                        </div>
+                        <h6>Christopher <small>@ccarlsen</small></h6>
+                    </li>
+                    <li data-status="offline">
+                        <div class="avatar">
+                            <img src="../img/ccarlsen_s.png" class="rounded">
+                        </div>
+                        <h6>Christopher <small>@ccarlsen</small></h6>
+                    </li>
+                </ul>
             </div>
         </div>
         <div id="application">
