Updated context menu icons + basic chat layout

--- a/html/application.html
+++ b/html/application.html
@@ -82,6 +82,27 @@
             </div>
         </div>
         <div id="application">
+            <div class="tabs">
+                tabs
+            </div>
+            <div class="chat">
+                chat
+                <h1>.</h1>
+                <h1>.</h1>
+                <h1>.</h1>
+                <h1>.</h1>
+                <h1>.</h1>
+                <h1>.</h1>
+                <h1>.</h1>
+                <h1>.</h1>
+                <h1>.</h1>
+                <h1>.</h1>
+                <h1>.</h1>
+                <h1>.</h1>
+            </div>
+            <div class="send">
+                send
+            </div>
         </div>
     </div>
     
