Updates for major parts of chat

--- a/html/application.html
+++ b/html/application.html
@@ -83,25 +83,35 @@
         </div>
         <div id="application">
             <div class="tabs">
-                tabs
+                <ul>
+                    <li class="active">Christopher <i></i></li>
+                    <li>(5) Martin & Daniel <i></i></li>
+                </ul>
             </div>
             <div class="chat">
-                chat
-                <h1>.</h1>
-                <h1>.</h1>
-                <h1>.</h1>
-                <h1>.</h1>
-                <h1>.</h1>
-                <h1>.</h1>
-                <h1>.</h1>
-                <h1>.</h1>
-                <h1>.</h1>
-                <h1>.</h1>
-                <h1>.</h1>
-                <h1>.</h1>
+                <div class="item">
+                    <div class="avatar">
+                        <img src="../img/ccarlsen_s.png" class="rounded">
+                    </div>
+                    <div class="content">
+                        <div class="name">
+                            <h6>Christopher</h6>
+                        </div>
+                        <div class="message">
+                            <p>lorem ipsum dolor sit amet</p>
+                        </div>
+                        <div class="time">
+                            <p>7:34 PM</p>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="send">
-                send
+                <form id="sendForm">
+                    <div class="emoticons"><i></i></div>
+                    <textarea id="sendMessage" placeholder="Send a message"></textarea>
+                    <div class="drawing"><i></i></div>
+                </form>
             </div>
         </div>
     </div>
