Various changes to chat layout

--- a/html/application.html
+++ b/html/application.html
@@ -89,7 +89,7 @@
                 </ul>
             </div>
             <div class="chat">
-                <div class="item">
+                <div class="item normal">
                     <div class="avatar">
                         <img src="../img/ccarlsen_s.png" class="rounded">
                     </div>
@@ -98,10 +98,32 @@
                             <h6>Christopher</h6>
                         </div>
                         <div class="message">
-                            <p>lorem ipsum dolor sit amet</p>
+                            <p>a normal message</p>
                         </div>
                         <div class="time">
                             <p>7:34 PM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item append">
+                    <div class="content">
+                        <div class="message">
+                            <p>an appended message</p>
+                        </div>
+                        <div class="time">
+                            <p>7:34 PM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item presence">
+                    <div class="animation">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <div class="content">
+                        <div class="message">
+                            <p><strong>Christopher</strong> is typing...</p>
                         </div>
                     </div>
                 </div>
