Added data attributes to tabs/friends

--- a/html/application.html
+++ b/html/application.html
@@ -30,49 +30,49 @@
             </div>
             <div class="friends">
                 <ul>
-                    <li data-status="online">
+                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="online">
                         <div class="avatar">
                             <img src="../img/ccarlsen_s.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
-                    <li data-status="online">
+                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="online">
                         <div class="avatar">
                             <img src="../img/ccarlsen_s.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
-                    <li data-status="away">
+                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="away">
                         <div class="avatar">
                             <img src="../img/ccarlsen_s.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
-                    <li data-status="away">
+                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="away">
                         <div class="avatar">
                             <img src="../img/ccarlsen_s.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
-                    <li data-status="busy">
+                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="busy">
                         <div class="avatar">
                             <img src="../img/ccarlsen_s.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
-                    <li data-status="offline">
+                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="offline">
                         <div class="avatar">
                             <img src="../img/ccarlsen_s.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
-                    <li data-status="offline">
+                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="offline">
                         <div class="avatar">
                             <img src="../img/ccarlsen_s.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
-                    <li data-status="offline">
+                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="offline">
                         <div class="avatar">
                             <img src="../img/ccarlsen_s.png" class="rounded">
                         </div>
@@ -84,8 +84,8 @@
         <div id="application">
             <div class="tabs">
                 <ul>
-                    <li class="active">Christopher <i></i></li>
-                    <li>(5) Martin & Daniel <i></i></li>
+                    <li data-username="ccarlsen"  class="active">Christopher<i></i></li>
+                    <li data-username="madetho" >(5) Martin & Daniel<i></i></li>
                 </ul>
             </div>
             <div class="chat">
