--- a/html/application.html
+++ b/html/application.html
@@ -22,7 +22,7 @@
         <div id="sidebar">
             <div class="profile" data-status="online">
                 <div class="avatar">
-                    <img src="../img/ccarlsen_s.png" class="rounded">
+                    <img src="../img/ccarlsen_small.png" class="rounded">
                 </div>
                 <h4>Christopher</h4>
                 <h6>@ccarlsen</h6>
@@ -32,49 +32,49 @@
                 <ul>
                     <li data-firstname="Christopher" data-username="ccarlsen" data-status="online">
                         <div class="avatar">
-                            <img src="../img/ccarlsen_s.png" class="rounded">
+                            <img src="../img/ccarlsen_small.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
                     <li data-firstname="Christopher" data-username="ccarlsen" data-status="online">
                         <div class="avatar">
-                            <img src="../img/ccarlsen_s.png" class="rounded">
+                            <img src="../img/ccarlsen_small.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
                     <li data-firstname="Christopher" data-username="ccarlsen" data-status="away">
                         <div class="avatar">
-                            <img src="../img/ccarlsen_s.png" class="rounded">
+                            <img src="../img/ccarlsen_small.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
                     <li data-firstname="Christopher" data-username="ccarlsen" data-status="away">
                         <div class="avatar">
-                            <img src="../img/ccarlsen_s.png" class="rounded">
+                            <img src="../img/ccarlsen_small.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
                     <li data-firstname="Christopher" data-username="ccarlsen" data-status="busy">
                         <div class="avatar">
-                            <img src="../img/ccarlsen_s.png" class="rounded">
+                            <img src="../img/ccarlsen_small.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
                     <li data-firstname="Christopher" data-username="ccarlsen" data-status="offline">
                         <div class="avatar">
-                            <img src="../img/ccarlsen_s.png" class="rounded">
+                            <img src="../img/ccarlsen_small.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
                     <li data-firstname="Christopher" data-username="ccarlsen" data-status="offline">
                         <div class="avatar">
-                            <img src="../img/ccarlsen_s.png" class="rounded">
+                            <img src="../img/ccarlsen_small.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
                     <li data-firstname="Christopher" data-username="ccarlsen" data-status="offline">
                         <div class="avatar">
-                            <img src="../img/ccarlsen_s.png" class="rounded">
+                            <img src="../img/ccarlsen_small.png" class="rounded">
                         </div>
                         <h6>Christopher <small>@ccarlsen</small></h6>
                     </li>
@@ -91,7 +91,7 @@
             <div class="chat">
                 <div class="item normal">
                     <div class="avatar">
-                        <img src="../img/ccarlsen_s.png" class="rounded">
+                        <img src="../img/ccarlsen_small.png" class="rounded">
                     </div>
                     <div class="content">
                         <div class="name">
