Dynamically created tabs and chat areas

--- a/html/application.html
+++ b/html/application.html
@@ -30,103 +30,24 @@
             </div>
             <div class="friends">
                 <ul>
-                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="online">
+                    <li data-firstname="Martin" data-username="MaDetho" data-status="online">
                         <div class="avatar">
-                            <img src="../img/ccarlsen_small.png" class="rounded">
+                            <img src="../img/default_small.png" class="rounded">
                         </div>
-                        <h6>Christopher <small>@ccarlsen</small></h6>
+                        <h6>Martin <small>@MaDetho</small></h6>
                     </li>
-                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="online">
+                    <li data-firstname="Daniel" data-username="loe" data-status="away">
                         <div class="avatar">
-                            <img src="../img/ccarlsen_small.png" class="rounded">
+                            <img src="../img/default_small.png" class="rounded">
                         </div>
-                        <h6>Christopher <small>@ccarlsen</small></h6>
-                    </li>
-                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="away">
-                        <div class="avatar">
-                            <img src="../img/ccarlsen_small.png" class="rounded">
-                        </div>
-                        <h6>Christopher <small>@ccarlsen</small></h6>
-                    </li>
-                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="away">
-                        <div class="avatar">
-                            <img src="../img/ccarlsen_small.png" class="rounded">
-                        </div>
-                        <h6>Christopher <small>@ccarlsen</small></h6>
-                    </li>
-                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="busy">
-                        <div class="avatar">
-                            <img src="../img/ccarlsen_small.png" class="rounded">
-                        </div>
-                        <h6>Christopher <small>@ccarlsen</small></h6>
-                    </li>
-                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="offline">
-                        <div class="avatar">
-                            <img src="../img/ccarlsen_small.png" class="rounded">
-                        </div>
-                        <h6>Christopher <small>@ccarlsen</small></h6>
-                    </li>
-                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="offline">
-                        <div class="avatar">
-                            <img src="../img/ccarlsen_small.png" class="rounded">
-                        </div>
-                        <h6>Christopher <small>@ccarlsen</small></h6>
-                    </li>
-                    <li data-firstname="Christopher" data-username="ccarlsen" data-status="offline">
-                        <div class="avatar">
-                            <img src="../img/ccarlsen_small.png" class="rounded">
-                        </div>
-                        <h6>Christopher <small>@ccarlsen</small></h6>
+                        <h6>Daniel <small>@loe</small></h6>
                     </li>
                 </ul>
             </div>
         </div>
         <div id="application">
             <div class="tabs">
-                <ul>
-                    <li data-username="ccarlsen"  class="active">Christopher<i></i></li>
-                    <li data-username="madetho" >(5) Martin & Daniel<i></i></li>
-                </ul>
-            </div>
-            <div class="chat">
-                <div class="item normal">
-                    <div class="avatar">
-                        <img src="../img/ccarlsen_small.png" class="rounded">
-                    </div>
-                    <div class="content">
-                        <div class="name">
-                            <h6>Christopher</h6>
-                        </div>
-                        <div class="message">
-                            <p>a normal message</p>
-                        </div>
-                        <div class="time">
-                            <p>7:34 PM</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item append">
-                    <div class="content">
-                        <div class="message">
-                            <p>an appended message</p>
-                        </div>
-                        <div class="time">
-                            <p>7:34 PM</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="item presence">
-                    <div class="animation">
-                        <span></span>
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <div class="content">
-                        <div class="message">
-                            <p><strong>Christopher</strong> is typing...</p>
-                        </div>
-                    </div>
-                </div>
+                <ul></ul>
             </div>
             <div class="send">
                 <form id="sendForm">
