--- a/html/signin.html
+++ b/html/signin.html
@@ -4,23 +4,13 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
     
-    <!-- Window bar -->
-    <div class="windowBar">
-        <div class="title">Puhn</div>
-        <div class="actions">
-            <i class="close"></i>
-            <i class="minimize"></i>
-        </div>
-    </div>
-    
-    <!-- Window content -->
     <div class="windowContent">
         <div id="signIn">
             <h1>Puhn</h1>
             <h5>Free, instant messaging.</h5>
             <form id="signInForm">
-                <input id="signInUsername" type="text" class="big" placeholder="Username" required>
-                <input id="signInPassword" type="password" class="big" placeholder="Password" required>
+                <input id="signInUsername" type="text" placeholder="Username" required>
+                <input id="signInPassword" type="password" placeholder="Password" required>
                 <button id="signInButton" class="big blue wide">Sign in</button>
                 <div class="checkbox">
                     <input type="checkbox" id="rememberMe">
