Redid the window bar

--- a/html/application.html
+++ b/html/application.html
@@ -4,6 +4,16 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
     
+    <!-- Window bar -->
+    <div class="windowBar">
+        <ul>
+            <li class="icon minimize"></li>
+            <li class="icon maximize"></li>
+            <li class="icon close"></li>
+        </ul>
+    </div>
+    
+    <!-- Window content -->
     <div class="windowContent">
         <div id="sidebar">
             <div class="profile" data-status="online">
@@ -32,13 +42,6 @@
             </div>
         </div>
         <div id="application">
-            <div class="top">
-                <ul class="windowBar">
-                    <li class="icon minimize"></li>
-                    <li class="icon maximize"></li>
-                    <li class="icon close"></li>
-                </ul>
-            </div>
             <div data-username="MaDetho" class="chat">
                 <div data-username="MaDetho" class="item normal">
                     <div class="avatar">
