--- a/html/signin.html
+++ b/html/signin.html
@@ -4,6 +4,15 @@
     <!-- CSS -->
     <link rel="stylesheet" href="../css/style.css">
     
+    <!-- Window bar -->
+    <div class="windowBar">
+        <ul>
+            <li class="icon minimize"></li>
+            <li class="icon close"></li>
+        </ul>
+    </div>
+    
+    <!-- Window content -->
     <div class="windowContent">
         <div id="signIn">
             <h1>Puhn</h1>
