--- a/html/application.html
+++ b/html/application.html
@@ -26,7 +26,7 @@
             </div>
             <div class="friends">
                 <ul>
-                    <li data-firstname="Martin" data-username="MaDetho" data-status="online">
+                    <li data-firstname="Martin" data-username="MaDetho" data-status="online" class="active">
                         <div class="avatar">
                             <img src="../img/default_small.png" class="rounded">
                         </div>
