--- a/html/signin.html
+++ b/html/signin.html
@@ -20,7 +20,7 @@
             <form id="signInForm">
                 <input id="signInUsername" type="text" placeholder="Username" required>
                 <input id="signInPassword" type="password" placeholder="Password" required>
-                <button id="signInButton" class="big blue wide">Sign in</button>
+                <button id="signInButton" class="wide">Sign in</button>
                 <div class="checkbox">
                     <input type="checkbox" id="rememberMe">
                     <label for="rememberMe">Remember me</label>
@@ -29,7 +29,7 @@
             </form>
         </div>
         <div id="signup">
-            <button id="signUpButton">Create an account</button>
+            <small>Don't have an account? <a href="#" id="createAnAccount">Sign up</a></small>
         </div>
     </div>
     
