Added modal overlay for profile settings

--- a/html/application.html
+++ b/html/application.html
@@ -88,6 +88,18 @@
                 </form>
             </div>
         </div>
+        <div id="profileSettings" class="overlay">
+            <div class="modal">
+                <div class="header">
+                    <h5>Profile settings</h5>
+                </div>
+                <div class="content">
+                    <form id="settingsForm">
+                        <button id="settingsButton">Close</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
     
     <!-- JavaScript -->
