Dynamically add profile information

--- a/html/application.html
+++ b/html/application.html
@@ -16,30 +16,8 @@
     <!-- Window content -->
     <div class="windowContent">
         <div id="sidebar">
-            <div class="profile" data-status="online">
-                <div class="avatar">
-                    <img src="../img/ccarlsen_small.png" class="rounded">
-                </div>
-                <h4>Christopher</h4>
-                <h6>@ccarlsen</h6>
-                <button id="optionsButton" class="rounded">...</button>
-            </div>
-            <div class="friends">
-                <ul>
-                    <li data-firstname="Martin" data-username="MaDetho" data-status="online" class="active">
-                        <div class="avatar">
-                            <img src="../img/default_small.png" class="rounded">
-                        </div>
-                        <h6>Martin <small>@MaDetho</small></h6>
-                    </li>
-                    <li data-firstname="Daniel" data-username="loe" data-status="away">
-                        <div class="avatar">
-                            <img src="../img/default_small.png" class="rounded">
-                        </div>
-                        <h6>Daniel <small>@loe</small></h6>
-                    </li>
-                </ul>
-            </div>
+            <div class="profile" data-status=""></div>
+            <div class="friends"></div>
         </div>
         <div id="application">
             <div data-username="MaDetho" class="chat">
