Added space before friend list username

--- a/html/application.html
+++ b/html/application.html
@@ -16,7 +16,7 @@
     <!-- Window content -->
     <div class="windowContent">
         <div id="sidebar">
-            <div class="profile" data-status=""></div>
+            <div class="profile"></div>
             <div class="friends"></div>
         </div>
         <div id="application">
